<resources>
    <string name="app_name">青春纪念册</string>
    <string name="action_settings">Settings</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="email_phone">邮箱/手机号</string>
    <string name="password">密码</string>
    <string name="login_problem"><u>登陆有问题?</u></string>
    <string name="email">邮箱</string>
    <string name="phone">手机号</string>
    <string name="validation">验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="home">首页</string>
    <string name="my_photo">我的纪念册</string>
    <string name="my_bookmark">我的收藏</string>
    <string name="people_can_see">别人可见</string>
    <string name="people_cannot_see">别人不可见</string>
    <string name="my_account">我的账号</string>
    <string name="update_password">修改密码</string>
    <string name="logout">登出</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="cancel_bookmark">取消收藏</string>
    <string name="confirm_upload">确定上传</string>
    <string name="photo_album">相册</string>
    <string name="take_photo">拍照</string>
    <string name="word">文字</string>
    <string name="beautify">美化</string>
    <string name="fuzzy">模糊</string>
    <string name="edit">编辑</string>
    <string name="update_album_name">修改图册名字</string>
    <string name="delete_album">删除该图册</string>
    <string name="confirm">确定</string>
    <string name="add_bookmark">添加收藏</string>
    <string name="hot">最热</string>
    <string name="new_str">最新</string>
    <string name="more">更多</string>
    <string name="album">相簿</string>
    <string name="my_info">我的信息</string>
    <string name="or_upload_to_others">或者上传至之前图册</string>
    <string name="album_name">图册名称</string>

</resources>
