<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_bg_white_stroke_green"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="25dp">

        <Button
            android:id="@+id/btn_album"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white_bg"
            android:gravity="center"
            android:text="@string/album"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@color/white_bg"
            android:gravity="center"
            android:text="@string/take_photo"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/white_bg"
            android:text="@string/cancel"
            android:textColor="@color/black2"
            android:textSize="16dp"
            android:typeface="monospace" />
    </LinearLayout>
</RelativeLayout>