<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_bg"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:scrollbars="none"
        android:layout_above="@+id/user_pic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/white_bg2"
                android:textSize="32sp"
                android:typeface="monospace" />


            <TextView
                android:id="@+id/btn_my_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/my_photo"
                android:textColor="@color/white_bg2"
                android:textSize="32sp"
                android:typeface="monospace" />


            <TextView
                android:id="@+id/btn_my_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/my_bookmark"
                android:textColor="@color/white_bg2"
                android:textSize="32sp"
                android:typeface="monospace" />

        </LinearLayout>
    </ScrollView>


    <perface.sundy.com.perface.utils.custom_view.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user_pic"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/profile_img"
        app:border_color="@color/green_bg"
        app:border_width="1dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp" />

</RelativeLayout>